--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hello Electron React!</title>
+    <title>炉石传说酒馆战旗战绩统计</title>
     <script>
       (() => {
         if (
