--- a/app/app.html
+++ b/app/app.html
@@ -24,6 +24,17 @@
       if (typeof process === 'object') {
         const scripts = [];
 
+        const query = location.search.split('?')[1];
+        const params = query
+          .split('&')
+          .map((v) => {
+            const arr = v.split('=');
+            return {
+              [arr[0]]: arr[1],
+            };
+          })
+          .reduce((acc, cur) => ({ ...acc, ...cur }), {});
+
         if (process.env.NODE_ENV === 'development') {
           // Dynamically insert the DLL script in development env in the
           // renderer process
@@ -32,9 +43,9 @@
         if (process.env.START_HOT) {
           // Dynamically insert the bundled app script in the renderer process
           const port = process.env.PORT || 1212;
-          scripts.push(`http://localhost:${port}/dist/renderer.dev.js`);
+          scripts.push(`http://localhost:${port}/dist/${params.name}.dev.js`);
         } else {
-          scripts.push('./dist/renderer.prod.js');
+          scripts.push(`./dist/${params.name}.prod.js`);
         }
 
         if (scripts.length) {
